Mark CS8632 as a non-error for net35 to get rid of the red code (The annotation for nullable reference types should only be used in code within a ‘#nullable’ annotations context.)

--- a/rd-net/Lifetimes/Lifetimes.csproj
+++ b/rd-net/Lifetimes/Lifetimes.csproj
@@ -18,6 +18,10 @@
         
     </PropertyGroup>
     
+    <PropertyGroup Condition="'$(TargetFramework)' == 'net35'">
+        <WarningsNotAsErrors>CS8632</WarningsNotAsErrors>
+    </PropertyGroup>
+    
     <PropertyGroup Label="NuGet">
         <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
         <PackageId>JetBrains.Lifetimes</PackageId>
