--- a/rd-net/RdFramework/RdFramework.csproj
+++ b/rd-net/RdFramework/RdFramework.csproj
@@ -17,6 +17,9 @@
         <Platforms>AnyCPU</Platforms>
     </PropertyGroup>
 
+    <PropertyGroup Condition="'$(TargetFramework)' == 'net35'">
+        <WarningsNotAsErrors>CS8632</WarningsNotAsErrors>
+    </PropertyGroup>
 
     <PropertyGroup Label="NuGet">
         <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
