--- a/rd-net/RdFramework.Reflection/RdFramework.Reflection.csproj
+++ b/rd-net/RdFramework.Reflection/RdFramework.Reflection.csproj
@@ -17,7 +17,10 @@
         <Platforms>AnyCPU</Platforms>
     </PropertyGroup>
 
-
+    <PropertyGroup Condition="'$(TargetFramework)' == 'net35'">
+        <WarningsNotAsErrors>CS8632</WarningsNotAsErrors>
+    </PropertyGroup>
+    
     <PropertyGroup Label="NuGet">
         <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
         <PackageId>JetBrains.RdFramework.Reflection</PackageId>
