do not break task flow if lifetime is terminated

--- a/rd-net/Lifetimes/Lifetimes.csproj
+++ b/rd-net/Lifetimes/Lifetimes.csproj
@@ -63,4 +63,8 @@
         <None Include="PackageIcon.png" Pack="true" PackagePath="" />
     </ItemGroup>
 
+    <ItemGroup Condition="'$(TargetFramework)' != 'net35'">
+      <PackageReference Include="System.Threading.Channels" Version="6.0.0" />
+    </ItemGroup>
+
 </Project>
